// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task displays completed task 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <Text
    style={
      Object {
        "textDecorationLine": "line-through",
      }
  }
    testID="task"
  >
    Foo
  </Text>
</View>
`;

exports[`Task displays the task 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <Text
    style={false}
    testID="task"
  >
    Foo
  </Text>
</View>
`;
